# rules_buf

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  internal_deps.bzl
buf/: BUILD.bazel  defs.bzl  repositories.bzl  toolchain.bzl
buf/plugins/: BUILD.bazel
buf/private/: BUILD.bazel  buf_versions.bzl  cli.bzl  generate.bzl  module.bzl  plugin.bzl  providers.bzl  toolchains_repo.bzl  version_update.ts  workspace.bzl
docs/: BUILD.bazel  rules.md
e2e/workspace/: BUILD.bazel  WORKSPACE
e2e/workspace/proto/: BUILD.bazel
e2e/workspace/proto/helloworld/v1/: helloworld_service.proto
