load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load(":buf_versions.bzl", "LATEST_VERSION")

write_file(
    name = "latest_version",
    out = "latest_version.sh",
    content = ["echo \"%s\"" % LATEST_VERSION],
    is_executable = True,
)

bzl_library(
    name = "buf_versions",
    srcs = ["buf_versions.bzl"],
    visibility = ["//buf:__subpackages__"],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//buf:__subpackages__"],
)

bzl_library(
    name = "cli",
    srcs = ["cli.bzl"],
    visibility = ["//buf:__subpackages__"],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
    visibility = ["//buf:__subpackages__"],
)

bzl_library(
    name = "generate",
    srcs = ["generate.bzl"],
    visibility = ["//buf:__subpackages__"],
    deps = [":providers"],
)

bzl_library(
    name = "module",
    srcs = ["module.bzl"],
    visibility = ["//buf:__subpackages__"],
    deps = [":providers"],
)

bzl_library(
    name = "plugin",
    srcs = ["plugin.bzl"],
    visibility = ["//buf:__subpackages__"],
    deps = [":providers"],
)

bzl_library(
    name = "workspace",
    srcs = ["workspace.bzl"],
    visibility = ["//buf:__subpackages__"],
    deps = [":providers"],
)
